Extend ${JOB_NAME} to include {java-version} param
To support javadocs jobs to build with multiple versions of
openjdk{8,11}, extend with '{java-version}' var to the ${JOB-NAME}.
Extending the job name with (java-version) var, JJB ensures
that its not passing the multiple java-versions as a list.

The job failure can be seen on the lispflowmapping jobs.
https://logs.opendaylight.org/releng/vex-yul-odl-jenkins-1/lispflowmapping-maven-javadoc-verify-neon/71/
https://logs.opendaylight.org/releng/vex-yul-odl-jenkins-1/lispflowmapping-maven-javadoc-publish-neon/19

Change-Id: If2e189f3e76f36d73863d98f1217c0b42ada52f1
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -310,7 +310,7 @@
       - lf-provide-maven-settings-cleanup
 
 - job-template:
-    name: '{project-name}-maven-javadoc-publish-{stream}'
+    name: '{project-name}-maven-javadoc-publish-{stream}-{java-version}'
     id: gerrit-maven-javadoc-publish
     <<: *lf_maven_common
     # yamllint disable-line rule:key-duplicates
@@ -340,7 +340,7 @@
                   branch-pattern: '**/{branch}'
 
 - job-template:
-    name: '{project-name}-maven-javadoc-publish-{stream}'
+    name: '{project-name}-maven-javadoc-publish-{stream}-{java-version}'
     id: github-maven-javadoc-publish
     <<: *lf_maven_common
     # yamllint disable-line rule:key-duplicates
@@ -436,7 +436,7 @@
       - lf-provide-maven-settings-cleanup
 
 - job-template:
-    name: '{project-name}-maven-javadoc-verify-{stream}'
+    name: '{project-name}-maven-javadoc-verify-{stream}-{java-version}'
     id: gerrit-maven-javadoc-verify
     <<: *lf_maven_common
     # yamllint disable-line rule:key-duplicates
@@ -464,7 +464,7 @@
                   branch-pattern: '**/{branch}'
 
 - job-template:
-    name: '{project-name}-maven-javadoc-verify-{stream}'
+    name: '{project-name}-maven-javadoc-verify-{stream}-{java-version}'
     id: github-maven-javadoc-verify
     <<: *lf_maven_common
     # yamllint disable-line rule:key-duplicates
