Update lf-maven-stage macro with missing parts
Added the following missing parts to the lf-maven-stage macro.

* lf-provide-maven-settings
* lf-infra-create-netrc
* lf-provide-maven-settings-cleanup

This improves the macro to be a complete function that does not require
preparatory steps to complete it.

New Usage:

      - lf-maven-stage:
          mvn-global-settings: 'global-settings'
          mvn-settings: 'settings'
          mvn-staging-id: 'staging-profile-id'

This patch also updates the lf-maven-central macro as necessary to
work along side the lf-maven-stage changes.

Issue: RELENG-1554
Change-Id: Ie4fbcb52229c74c4216df4d07f077cd691ab6aa6
Signed-off-by: Bengt Thuree <bthuree@linuxfoundation.org>

--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -184,11 +184,15 @@
           condition-kind: boolean-expression
           condition-expression: '{mvn-central}'
           steps:
+            - lf-provide-maven-settings:
+                global-settings-file: '{mvn-global-settings}'
+                settings-file: '{mvn-settings}'
             - lf-infra-create-netrc:
                 server-id: 'ossrh'
             - inject:
                 properties-content: 'OSSRH_PROFILE_ID={ossrh-profile-id}'
             - shell: !include-raw-escape: ../shell/maven-central.sh
+            - lf-provide-maven-settings-cleanup
 
 - builder:
     name: lf-maven-install
