Verify build node HARDWARE_ID
This script already checks each file's IMAGE_NAME for validity; this
adds essentially the same validation to check the HARDWARD_ID.
Also add the job to the ci-jobs groups, and set submodule-recursive
value for github-jenkins-cfg-verify.

Issue: RELENG-1418
Change-Id: I0266a0fcc276b2960c9c1749a89bc70e8115d152
Signed-off-by: Eric Ball <eball@linuxfoundation.org>

--- a/jjb/lf-ci-job-groups.yaml
+++ b/jjb/lf-ci-job-groups.yaml
@@ -4,6 +4,7 @@
 
     jobs:
       - gerrit-jenkins-cfg-merge
+      - gerrit-jenkins-cfg-verify
       - gerrit-jenkins-sandbox-cleanup
       - gerrit-jjb-deploy-job
       - gerrit-jjb-merge
@@ -14,6 +15,7 @@
 
     jobs:
       - github-jenkins-cfg-merge
+      - github-jenkins-cfg-verify
       - github-jenkins-sandbox-cleanup
       - github-jjb-deploy-job
       - github-jjb-merge
