Modify cron entry
Modified cron entry to pick from custom config

Issue-Id: RELENG-1728
Change-Id: Icd4d97a37672fd0dece6960fa6de7d9fa2fe8a1e
Signed-off-by: Suresh Channamallu <schannamallu@linuxfoundation.org>

--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -942,7 +942,7 @@
 
     triggers:
       # Build weekly on Saturdays
-      - timed: 'H H * * 6'
+      - timed: '{obj:cron}'
       - github-pull-request:
           trigger-phrase: '^run-sonar$'
           only-trigger-phrase: true
