Optimize the jjb-deploy trigger regex
Optimize the jjb-deploy trigger regex to trigger the job _only_ when the
Gerrit CR comment is intended as a command.

The `jjb-deploy` job presently gets triggered and is waste of infra resources
when the keyword is intended as comment in Gerrit.

Ref: https://git.opendaylight.org/gerrit/#/c/80358/

Issue: RELENG-1847
Change-Id: I3b35adb1284d3d9029ba025bf660b66fbb5d98e0
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -598,7 +598,7 @@
     submodule-timeout: 10
     gerrit_jjb_deploy_job_triggers:
       - comment-added-contains-event:
-          comment-contains-value: 'jjb-deploy[:]* (?!\*+$).+$'
+          comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(jjb-deploy[:]* (?!\*+$).+$)'
 
     #####################
     # Job Configuration #
