Update sigul macro to support sign mode
Sign mode is a parameter to allow the user to choose whether or not
to sign artifacts in parallel using gnu-parallel or in serial mode
(bash for loop) methods.

Cleanup obsolete lftools_activate method.

Change-Id: Ib202f93a37e2830e5048c5a766c17d75233c6423
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -275,9 +275,10 @@
             - shell: !include-raw-escape: ../shell/sigul-configuration.sh
             - shell: !include-raw-escape: ../shell/sigul-install.sh
             - inject:
-                properties-content: SIGN_DIR={sign-dir}
+                properties-content: |
+                    SIGN_DIR={sign-dir}
+                    SIGN_MODE={sign-mode}
             - shell: !include-raw-escape:
-                - ../shell/common-variables.sh
                 - ../shell/sigul-sign-dir.sh
             - shell: !include-raw-escape: ../shell/sigul-configuration-cleanup.sh
 
