--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -275,7 +275,9 @@
             - shell: !include-raw-escape: ../shell/sigul-configuration.sh
             - shell: !include-raw-escape: ../shell/sigul-install.sh
             - inject:
-                properties-content: SIGN_DIR={sign-dir}
+                properties-content: |
+                    SIGN_DIR={sign-dir}
+                    SIGN_MODE={sign-mode}
             - shell: !include-raw-escape:
                 - ../shell/common-variables.sh
                 - ../shell/sigul-sign-dir.sh
