Update maven-stage parameter to support sign mode
Sign mode is a parameter to allow the user to choose whether or not
to sign artifacts in parallel using gnu-parallel or in serial mode
(bash for loop) methods.

Change-Id: Ib202f93a37e2830e5048c5a766c17d75233c6423
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -30,6 +30,8 @@
       - lf-infra-create-netrc:
           server-id: '{mvn-staging-id}'
       # include-raw-escape fails due to JJB bug
+      - inject:
+          properties-content: SIGN_MODE={sign-mode}
       - shell: !include-raw-escape:
           - ../shell/common-variables.sh
           - ../shell/maven-stage.sh
@@ -679,6 +681,7 @@
     mvn-version: mvn35
     ossrh-profile-id: ''
     sign-artifacts: false
+    sign-mode: parallel
     stream: master
     submodule-recursive: true
     submodule-timeout: 10
@@ -728,10 +731,12 @@
       - lf-sigul-sign-dir:
           sign-artifacts: '{sign-artifacts}'
           sign-dir: '$WORKSPACE/m2repo'
+          sign-mode: '{sign-mode}'
       - lf-maven-stage:
           mvn-global-settings: '{mvn-global-settings}'
           mvn-settings: '{mvn-settings}'
           mvn-staging-id: '{mvn-staging-id}'
+          sign-mode: '{sign-mode}'
       - lf-maven-central:
           mvn-central: '{mvn-central}'
           mvn-global-settings: '{mvn-global-settings}'
