Update lf-maven-central macro docs and templates
Update lf-maven-central macro docs and templates
with the missing required params.

The change 6a3a8fd3c9430a90f3b8c0c85e7e20b8a318eb8f
missed updating the docs and sample code.

Change-Id: I09b55bbf51cc3ef7c29d50b42e52982dc40e8f72
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/.jjb-test/lf-macros/lf-maven-central-minimal.yaml
+++ b/.jjb-test/lf-macros/lf-maven-central-minimal.yaml
@@ -7,6 +7,8 @@
     #####################
 
     mvn-central: true
+    mvn-global-settings: ''
+    mvn-settings: ''
     ossrh-profile-id: ''
 
     #####################
@@ -16,4 +18,6 @@
     builders:
       - lf-maven-central:
           mvn-central: '{mvn-central}'
+          mvn-global-settings: '{mvn-global-settings}'
+          mvn-settings: '{mvn-settings}'
           ossrh-profile-id: '{ossrh-profile-id}'
