Update rtd verify job to check release notes format
The rtd verify job presently does not fail if there are
formatting issues with release notes.

To fix this we can call  `reno report` through tox which does
a lint check and converts the release notes in text files.
The command fails the verify job on any incorrect formatting.

Issue: RELENG-1863
Change-Id: I9d47ae9b57e6f5fd9858a44cf05f6fe81d3278c5
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,11 @@ deps = -rrequirements.txt
 commands =
     sphinx-build -W -b html -n -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/html
 
+[testenv:reno-report]
+deps = -rrequirements.txt
+commands =
+    reno report {toxinidir}/
+
 [testenv:ensure-documented]
 commands =
     ./ensure-documented.sh
