--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -256,6 +256,11 @@
       - shell: !include-raw-escape: ../shell/rtd-verify.sh
 
 - builder:
+    name: check-info-votes
+    builders:
+      - shell: !include-raw-escape: ../shell/check-info-votes.sh
+
+- builder:
     name: lf-sigul-sign-dir
     # Requires that Jenkins be configured with SIGUL_BRIDGE_IP as a global
     # Environment variable
