Skip creating source jars in verify job
Issue: RELENG-1655
Change-Id: Ibd2aad63afda3feb97619cef67c10c8b665cd924
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -1064,7 +1064,7 @@
     mvn-global-settings: global-settings
     mvn-goals: clean deploy
     mvn-opts: ''
-    mvn-params: '-Dstream=$STREAM'
+    mvn-params: '-Dstream=$STREAM -Dmaven.source.skip=true'
     mvn-version: mvn35
     stream: master
     submodule-recursive: true
