--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -3,6 +3,30 @@
 # BUILDERS #
 ############
 
+# To take advantage of this macro, have your build write
+# out the file 'gerrit_comment.txt' with information to post
+# back to gerrit and include this macro in the list of builders.
+- builder:
+    name: comment-to-gerrit
+    builders:
+      - shell: |
+          #!/bin/bash -l
+          set -o errexit
+          set -o pipefail
+          set -o xtrace
+          if [[ -e gerrit_comment.txt ]] ; then
+              echo
+              echo "posting review comment to gerrit..."
+              echo
+              cat gerrit_comment.txt
+              echo
+              ssh -p 29418 "$GERRIT_HOST" \
+                  "gerrit review -p $GERRIT_PROJECT \
+                   -m '$(cat gerrit_comment.txt)' \
+                   $GERRIT_PATCHSET_REVISION \
+                   --notify NONE"
+          fi
+
 - builder:
     name: lf-fetch-dependent-patches
     builders:
