Add comment-to-gerrit macro
This macro will post a comment to the gerrit patchset if the build
creates a file named gerrit_comment.txt
To use this macro add it to the list of builders

Change-Id: I30e2b10fc4e09f534b161dd99775d66bdc4c3e1a
Signed-off-by: Aric Gardner <agardner@linuxfoundation.org>

--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -3,6 +3,14 @@
 # BUILDERS #
 ############
 
+# To take advantage of this macro, have your build write
+# out the file 'gerrit_comment.txt' with information to post
+# back to gerrit and include this macro in the list of builders.
+- builder:
+    name: comment-to-gerrit
+    builders:
+      - shell: !include-raw ../shell/comment-to-gerrit.sh
+
 - builder:
     name: lf-fetch-dependent-patches
     builders:
