Update rtd-merge to also trigger on tag changes
When we release a tag, it should also trigger a rtd-merge build
so that the doc release note link is updated appropriately.

Change-Id: I49f6555b707018cca4042917c4193138456dafeb
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-rtd-jobs.yaml
+++ b/jjb/lf-rtd-jobs.yaml
@@ -79,6 +79,7 @@
       - change-merged-event
       - comment-added-contains-event:
           comment-contains-value: remerge$
+      - ref-updated-event
 
     #####################
     # Job Configuration #
@@ -109,6 +110,8 @@
               branches:
                 - branch-compare-type: 'ANT'
                   branch-pattern: '**/{branch}'
+                - branch-compare-type: 'ANT'
+                  branch-pattern: 'refs/tags/**'
               file-paths: '{obj:gerrit_trigger_file_paths}'
 
 - job-template:
