Reduce output in log files
Previously ran 'pip freeze' (> log) twice to get list of pip packages
installed during build.  Run 'pip list' (> file) twice and archive the
files and diffs. Configured 'logs-deploy.sh' to run as separate Jekins
script.

Issue: RELENG-1902
Change-Id: Ib0f99bd1eb125015467c7eaf91d26c76e92bffa0
Signed-off-by: Tim Johnson <tijohnson@linuxfoundation.org>

--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -76,6 +76,7 @@
           # Ensure python-tools are installed in case job template does not
           # call the lf-infra-pre-build macro.
           - ../shell/python-tools-install.sh
+      - shell: !include-raw:
           - ../shell/logs-deploy.sh
       - shell: !include-raw:
           - ../shell/logs-clear-credentials.sh
