Use WS Agent config file internally
After checking with legal, it was agreed to not
allow tech teams to provide their own
wss-unified-agent.config file for WhiteSource scans.
Instead, this file should be managed in Jenkins Settings
Files

Change-Id: I20e330794ba28cb4c0f5206c290a734c1794b00e
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/lf-whitesource-jobs.yaml
+++ b/jjb/lf-whitesource-jobs.yaml
@@ -7,6 +7,10 @@
 - builder:
     name: lf-infra-wss-unified-agent-scan
     builders:
+      - config-file-provider:
+          files:
+            - file-id: wss-unified-agent.config
+              target: $WORKSPACE/wss-unified-agent.config
       - shell: !include-raw:
           - ../shell/whitesource-unified-agent-cli.sh
 
@@ -105,10 +109,6 @@
           name: WSS_PRODUCT_NAME
           default: '{wss-product-name}'
           description: Product to asociate the WhiteSource report in the dashboard.
-      - string:
-          name: WSS_UNIFIED_AGENT_CONFIG
-          default: '{wss-unified-agent-config}'
-          description: Path to wss-unifed-agent.config
       - string:
           name: WSS_UNIFIED_AGENT_OPTIONS
           default: '{wss-unified-agent-opts}'
