--- a/.jjb-test/lf-whitesource-jobs.yaml
+++ b/.jjb-test/lf-whitesource-jobs.yaml
@@ -4,7 +4,8 @@
     jobs:
       - gerrit-whitesource-scan
     branch: 'master'
+    mvn-clean-install: true
+    mvn-settings: 'whitesource-scan-project-settings'
     project: 'whitesource/scan-project-jobs'
     project-name: 'whitesource-scan-project'
     wss-product-name: EXAMPLE-ORG
-    wss-unified-agent-config: '.config/wss-unified-agent.config'
