Update jenkins-cfg-verify to use $GERRIT_REFSPEC
Update jenkins-cfg to verify images names updated from the
$GERRIT_REFSPEC instead of the master branch.

Current implementation uses the 'master' branch instead of
the $GERRIT_REFSPEC, therefore failing the verify job
on false positives.

Issue: RELENG-1950
Change-Id: I6f212b28e4189ff5c7958035c7992b55d7153d02
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -473,11 +473,11 @@
     scm:
       - lf-infra-gerrit-scm:
           git-url: '{git-url}'
-          refspec: 'refs/heads/{branch}'
-          branch: '{branch}'
+          refspec: '$GERRIT_REFSPEC'
+          branch: '$GERRIT_BRANCH'
           submodule-recursive: true
           submodule-timeout: '{submodule-timeout}'
-          choosing-strategy: default
+          choosing-strategy: gerrit
           jenkins-ssh-credential: '{jenkins-ssh-credential}'
 
     triggers:
