Fix gerrit-packer-merge choosing strategy
Our definition of a merge job is that it always takes the HEAD of the
branch. Gerrit Trigger choosing strategy does not do this and breaks
expected outcomes when retriggering an old merge.

Change-Id: I2e3c12f1c9b59e624e742943a5dbef5123129e6c
Signed-off-by: Andrew Grimberg <agrimberg@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -1449,7 +1449,7 @@
           branch: '$GERRIT_BRANCH'
           submodule-recursive: '{submodule-recursive}'
           submodule-timeout: '{submodule-timeout}'
-          choosing-strategy: gerrit
+          choosing-strategy: default
           jenkins-ssh-credential: '{jenkins-ssh-credential}'
 
     triggers:
