Make stripping of "SNAPSHOT" in poms optional
When maven-versions-plugin is set to "true", the job will
use the versions plugin to update the versions in the pom.xml
files and will not need this step in maven-patch-release.sh to
happen.
This change DOES NOT affect current jobs which do not use the
maven versions plugin as this variable is set to false by default.
Update maven-versions-plugin variable in the parameters to be able
to parse the value in the scripts.

Change-Id: Ic25197012fd0f23a859159bb86369feb8a02b9c2
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -727,6 +727,10 @@
           mvn-params: '{mvn-params}'
           mvn-version: '{mvn-version}'
           staging-profile-id: '{staging-profile-id}'
+      - bool:
+          name: MAVEN_VERSIONS_PLUGIN
+          default: '{maven-versions-plugin}'
+          description: Use maven-versions-plugin to update pom versions.
       - string:
           name: ARCHIVE_ARTIFACTS
           default: '{archive-artifacts}'
@@ -746,13 +750,13 @@
       - lf-provide-maven-settings:
           global-settings-file: '{mvn-global-settings}'
           settings-file: '{mvn-settings}'
-      - shell: !include-raw-escape: ../shell/maven-patch-release.sh
       - lf-maven-versions-plugin:
           maven-versions-plugin: '{maven-versions-plugin}'
           mvn-version: '{mvn-version}'
           mvn-pom: '{mvn-pom}'
           maven-versions-plugin-set-version: '{maven-versions-plugin-set-version}'
           mvn-settings: '{mvn-settings}'
+      - shell: !include-raw-escape: ../shell/maven-patch-release.sh
       - lf-maven-build:
           mvn-goals: '{mvn-goals}'
       - lf-sigul-sign-dir:
